# license_code_plates

./: .gitignore  Makefile  README.md  pyproject.toml
data/: database.db  letters.txt
data/to_upload/: 01.03.2022.txt  02.03.2022.txt  03.03.2022.txt  18.02.2022.txt  19.02.2022.txt  20.02.2022.txt  21.02.2022.txt  22.02.2022.txt  23.02.2022.txt  24.02.2022.txt  25.02.2022.txt  26.02.2022.txt  27.02.2022.txt  28.02.2022.txt
license_plates_stat/: __init__.py  app.py  get_data_daily.py  get_data_module.py  reset_database.py  scheduler.py  test.py  try.py  tryeee.py  upload_data.py
license_plates_stat/templates/: base.html  code.html  index.html  letters.html  total_data.html  update_info.html
