[tool.poetry]
name = "license-plates-stat"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pekatoros <y.pekatoros@gmail.com>"]
readme = "README.md"
packages = [{include = "license_plates_stat"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pandas = "^1.5.3"
bs4 = "^0.0.1"
requests = "^2.28.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
